--- a/index.html
+++ b/index.html
@@ -4,9 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>capa do pekka</title>
-    <limk rel="stylesheet" href="style.css">
+    <limk rel="stylesheet" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wgt@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" herf="style.css">
 </head>
 <body>
-    
+    <header class="cabeçalho">
+        <div class="container">
+            <input type="checkbox" id="menu" class="container_botao">
+            <label for="menu">
+                <span class="cabeçalho_menu-hamburguer container__imagem"></span>
+            </label>
+                    <ul class="lista-menu">
+                        <li class="lista-menu__titulo">Categorias</li>
+                        <li class="lista-menu__item">
+                            <a href="#" class="lista-menu__link">Programação</a>
+                        </li>
+                        <li class="lista-menu__item">
+                            <a href="#" class="lista-menu__link">Front-end</a>
+                        <li class="lista-menu__item">
+                            <a href="#" class="lista-menu__link">Infraestrutura</a>
+                        <li class="lista-menu__item">
+                            <a href="#" class="lista-menu__link">Business</a>
+                        <li class="lista-menu__item">
+                            <a href="#" class="lista-menu__link">Desing & UX</a>
+                    </ul>
+
+
+            <img scr="img/Logo.svg"   alt="Logo AluraBocks"  class="container_imagem"   
+        </div>
+        <div class="container">
+            <a href="#"><img scr="img/Favoritos.svg" alt="Meus Favoritos" class="container__imagem" </a>
+            <a href="#"><img scr="img/Compras.svg" alt="Meu Carrinho" class="container__imagem" </a>
+            <a href="#"><img scr="img/Usuario.svg" alt="Meu Perfil" class="container__imagem" </a>
+        </div>
+    </header>
+    <section class="benner">
+        <h2 class="banner__titulo"> Já sabe por onde começar?</h2>
+        <p class="banner__texto"> Encontre em nossa estante o que precisa para seu desenvolvimento</p>
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua própria leitura?">
+
+    </section>
+    <section class="carrossel">
+        <h2 class="carrossel-titulo">Novos Lançamentos</h2>
+        <!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img scr="img/ApacheKafka.svg" </div>
+      <div class="swiper-slide"><img scr="img/Liderança.svg" </div>
+      <div class="swiper-slide"><img scr="img/Javascript.svg" </div>
+      ...
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+  </div>
+    </section>
 </body>
 </html>
